--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -212,12 +212,12 @@ h3 {
 
 .product .swiper .swiper-prev {
   left: 45%;
-  cursor: url("../img/cursor_hand_tiny.png"), auto;
+  cursor: url("../img/cursor_pointer.png"), auto;
 }
 
 .product .swiper .swiper-next {
   right: 45%;
-  cursor: url("../img/cursor_pointer.png"), auto;
+  cursor: url("../img/cursor_hand_tiny.png"), auto;
 }
 
 /* HEADER */
@@ -920,15 +920,6 @@ h3 {
   left: 10%;
 }
 
-@keyframes fade-in {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 .main-brand .milk-and-pepper .floating {
   transition: .5s;
 }
@@ -1298,10 +1289,91 @@ body.brands .content-group .description {
 }
 
 /* CHOICE */
+.brand-choice .inner {
+  padding-bottom: 178px;
+}
+
 .brand-choice h3 {
   margin-bottom: 56px;
 }
 
+/* VIEW */
+.brand-view {
+  position: relative;
+  background: #000 url("../img/brands/view_img.jpg") no-repeat center/cover fixed;
+}
+
+.brand-view::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(204, 199, 187, 0.3); */
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.brand-view .inner {
+  height: 650px;
+}
+
+.brand-view .text-group {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+  font-weight: 700;
+  cursor: url("../img/cursor_hand.png"), auto;
+}
+
+.brand-view h3 {
+  margin-bottom: 11px;
+  font-size: 86px;
+  color: #fff;
+}
+
+.brand-view a {
+  display: block;
+  cursor: url("../img/cursor_hand.png"), auto;
+}
+
+.brand-view a span {
+  position: relative;
+  display: inline-block;
+  padding: 16px 0;
+  font-size: 16px;
+  color: #fff;
+}
+
+.brand-view a span::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  border-radius: 6px;
+}
+
+.brand-view a:hover span::after {
+  animation: show_line .7s ease-in-out;
+}
+
+@keyframes show_line {
+  0% {
+    opacity: 0;
+    width: 0;
+  }
+
+  100% {
+    opacity: 1;
+    width: 100%;
+  }
+}
 
 
 
