MOBILE CSS - VIDEO 까지

--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -1180,7 +1180,8 @@ body.brands .content-group .description {
   margin-bottom: 17px;
 }
 
-.brand-story .image {
+.brand-story .image.pc {
+  display: inline-block !important;
   width: 48%;
 }
 
