--- a/css/style_mobile.css
+++ b/css/style_mobile.css
@@ -98,6 +98,21 @@ p.description {
   position: absolute;
 }
 
+.visual .image {
+  width: 87%;
+  margin: 0 auto;
+  animation: rotate_image 1s;
+}
+
+@keyframes rotate_image {
+  0% {
+    transform: rotate(-45deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 /* HEADER */
 #header {
   position: fixed;
@@ -601,21 +616,6 @@ p.description {
   margin-bottom: 0;
 }
 
-.main-visual .image {
-  width: 87%;
-  margin: 0 auto;
-  animation: rotate_image 1s;
-}
-
-@keyframes rotate_image {
-  0% {
-    transform: rotate(-45deg);
-  }
-  100% {
-    transform: rotate(0deg);
-  }
-}
-
 .main-visual .description {
   margin: 20px auto;
   padding: 0 24px;
@@ -987,6 +987,221 @@ p.description {
 }
 
 
+/* brands.html */
+/* COMMON */
+body.brands .content-group em {
+  display: block;
+  margin: 22px 0 8px;
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.7em;
+  letter-spacing: -0.5px;
+  color: #000;
+}
+
+body.brands p.description {
+  padding: 0;
+}
+
+/* VISUAL */
+.brand-visual::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 30%;
+  width: 100%;
+  height: 134px;
+  background: url("../img/brands/layer_line.png") no-repeat center/cover;
+}
+
+.brand-visual {
+  position: relative;
+}
+
+.brand-visual .inner {
+  padding-top: 30px;
+}
+
+.brand-visual .title {
+  margin-bottom: 15px;
+  font-size: 32px;
+}
+
+.brand-visual .floating.floating1 {
+  left: 0;
+  bottom: -50px;
+  width: 415px;
+}
+
+.brand-visual .floating.floating2 {
+  right: -205px;
+  top: 38%;
+  width: 347px;
+  transform: translateX(100px);
+}
+
+.brand-visual .floating.floating3 {
+  right: 85px;
+  bottom: 24%;
+  width: 117px;
+  transform: translateX(-100px);
+}
+
+.brand-visual.on .floating {
+  transition: 1s;
+  transform: translateX(0);
+}
+
+/* ABOUT */
+.brand-about .inner {
+  margin: 0 24px 60px;
+}
+
+.brand-about .image {
+  display: none;
+}
+
+/* STORY */
+.brand-story .inner {
+  margin: 0 24px;
+}
+
+/* VIDEO */
+.brand-video .video__area {
+  position: relative;
+  width: 100%;
+  margin: 60px 0;
+}
+
+/* SLOGAN */
+.brand-slogan {
+  padding: 135px 0;
+}
+
+/* VALUE */
+.brand-value .row > div {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.brand-value .image {
+  width: 48%;
+}
+
+.brand-value .content-group {
+  text-align: center;
+}
+
+.brand-value .row:first-child .content-group {
+  width: 50%;
+}
+
+.brand-value .row:first-child .title {
+  margin-bottom: 17px;
+}
+
+.brand-value .row:last-child .content-group {
+  width: 48%;
+}
+
+.brand-value .row:last-child .title {
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 1.6em;
+  color: #000;
+}
+
+.brand-value .row:last-child .image {
+  position: relative;
+  left: 0;
+  top: -130px;
+}
+
+/* CHOICE */
+.brand-choice .inner {
+  padding-bottom: 178px;
+}
+
+.brand-choice h3 {
+  margin-bottom: 56px;
+}
+
+/* VIEW */
+.brand-view {
+  position: relative;
+  background: #000 url("../img/brands/view_img.jpg") no-repeat center/cover fixed;
+}
+
+.brand-view::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.brand-view .inner {
+  height: 650px;
+}
+
+.brand-view .text-group {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  text-align: center;
+  font-weight: 700;
+  cursor: url("../img/cursor_hand.png"), auto;
+}
+
+.brand-view h3 {
+  margin-bottom: 11px;
+  font-size: 86px;
+  color: #fff;
+}
+
+.brand-view a {
+  display: block;
+  cursor: url("../img/cursor_hand.png"), auto;
+}
+
+.brand-view a span {
+  position: relative;
+  display: inline-block;
+  padding: 16px 0;
+  font-size: 16px;
+  color: #fff;
+}
+
+.brand-view a span::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  border-radius: 6px;
+}
+
+.brand-view a:hover span::after {
+  animation: show_line .7s ease-in-out;
+}
+
+@keyframes show_line {
+  0% {
+    opacity: 0;
+    width: 0;
+  }
+
+  100% {
+    opacity: 1;
+    width: 100%;
+  }
+}
 
 
 /* 미디어쿼리 */
