--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -1383,7 +1383,7 @@ body.store .description {
   padding-top: 50px;
 }
 
-.store .inner {
+.store > .inner {
   overflow: hidden;
 }
 
@@ -1440,23 +1440,27 @@ body.store .description {
   margin-top: 130px;
 }
 
-.store__menu .text-group {
+.store__menu li .text-group {
   margin-top: 30px;
-  font-size: 15px;
-  font-weight: 700;
   color: #000;
 }
 
-.store__menu .title {
+.store__menu li .title {
   display: block;
+  margin-bottom: 19px;
   font-size: 30px;
 }
 
-.store__menu .description {
-  margin: 19px 0;
+.store__menu li .description p:not(.address) {
+  font-family: 'Libre Baskerville', 'Noto Sans KR', sans-serif;
+  font-weight: 700;
 }
 
-.store__menu .btn {
+.store__menu li .description .tel {
+  margin-top: 19px;
+}
+
+.store__menu li .btn {
   margin: 38px 0 0;
 }
 
@@ -1524,7 +1528,7 @@ body.store .description {
 
 
   /* store.html */
-  .store .inner {
+  .store > .inner {
     padding: 0 15px;
   }
 
