--- a/css/style_pc.css
+++ b/css/style_pc.css
@@ -1478,7 +1478,6 @@ body.store .description {
   overflow: hidden;
 }
 
-.cotielog .inner > div {}
 .cotielog .left {
   position: fixed;
   float: left;
@@ -1535,7 +1534,6 @@ body.store .description {
   min-width: 553px;
 }
 
-.cotielog .left .image img {}
 .cotielog .left .image img:first-child {
   position: absolute;
   left: 0;
@@ -1560,40 +1558,35 @@ body.store .description {
   width: 60%;
 }
 
-.cotielog .right .content {
-  
+.cotielog__content {
+  position: relative;
 }
 
-.cotielog .content ul {
+.cotielog__content ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.cotielog .content ul.invisible {
+.cotielog__content ul.invisible {
   display: none;
 }
 
-.cotielog .content ul li {
+.cotielog__content ul li {
   flex-basis: 48%;
   margin-bottom: 145px;
 }
 
-.cotielog .content ul li:nth-child(2) {
+.cotielog__content ul li:nth-child(2) {
   margin-top: 100px;
 }
 
-.cotielog .content ul li + li {
-
-}
-
-.cotielog .content ul li a {
+.cotielog__content ul li a {
   display: block;
   cursor: url("../img/cursor_hand.png"), auto;
 }
 
-.cotielog .content ul li a .image {}
-.cotielog .content ul li a .title {
+.cotielog__content ul li a .title {
   display: block;
   padding-top: 17px;
   font-family: 'Noto Sans KR', sans-serif;
@@ -1602,37 +1595,24 @@ body.store .description {
   color: #000;
 }
 
-.cotielog .content .btn {}
+.cotielog__content .news li:first-child .title::after {
+  content: '🎉';
+}
 
-.cotielog .content .btn span {
+.cotielog__content .btn {
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translateX(-50%);
+}
+
+.cotielog__content .btn span {
   padding-left: 10px;
 }
 
-.cotielog__notice {}
-.cotielog__notice li {}
-.cotielog__notice li a {}
-.cotielog__notice li a .image {}
-.cotielog__notice li a .title {}
-.cotielog__news {}
-.cotielog__news li {}
-.cotielog__news li:nth-child(2n) {}
-.cotielog__news li:nth-child(2n + 1) {}
-.content .cotielog__news li:first-child {
-  /* margin-bottom: 0; */
-}
-.cotielog__news li a {}
-.cotielog__news li a .image {}
-.cotielog__news li a .title {}
-.cotielog__event {}
-.cotielog__event li {}
-.cotielog__event li a {}
-.cotielog__event li a .image {}
-.cotielog__event li a .title {}
-.cotielog__story {}
-.cotielog__story li {}
-.cotielog__story li a {}
-.cotielog__story li a .image {}
-.cotielog__story li a .title {}
+
+
+
 
 
 
